--- a/L06 - CSS Positioning/P01_SocialMedia/social-media.html
+++ b/L06 - CSS Positioning/P01_SocialMedia/social-media.html
@@ -31,7 +31,13 @@
         </ul>
     </section>
     <section>
-        <h1>let's get in touch</h1>
+        <h2>let's get in touch</h2>
+        <div>
+            <div class="facebook"><a href="#"></a></div>
+            <div class="linkedin"><a href="#"></a></div>
+            <div class="youtube"><a href="#"></a></div>
+            <div class="twitter"><a href="#"></a></div>
+        </div>
     </section>
 </main>
 </body>
