--- a/L06 - CSS Positioning/P01_SocialMedia/social-media.html
+++ b/L06 - CSS Positioning/P01_SocialMedia/social-media.html
@@ -6,28 +6,28 @@
     <link rel="stylesheet" href="social-media.css">
 </head>
 <body>
-<main>
+<footer>
     <section>
         <h1>my account</h1>
         <ul>
-            <li>orders</li>
-            <li>profile details</li>
+            <li><a>orders</a></li>
+            <li><a>profile details</a></li>
         </ul>
     </section>
     <section>
         <h1>extras</h1>
         <ul>
-            <li>about us</li>
-            <li>contact us</li>
-            <li>gift certificates</li>
+            <li><a>about us</a></li>
+            <li><a>contact us</a></li>
+            <li><a>gift certificates</a></li>
         </ul>
     </section>
     <section>
         <h1>customers service</h1>
         <ul>
-            <li>about your order</li>
-            <li>wish list</li>
-            <li>compare list</li>
+            <li><a>about your order</a></li>
+            <li><a>wish list</a></li>
+            <li><a>compare list</a></li>
         </ul>
     </section>
     <section>
@@ -39,6 +39,6 @@
             <div class="twitter"><a href="#"></a></div>
         </div>
     </section>
-</main>
+</footer>
 </body>
 </html>
