--- a/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.html
+++ b/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.html
@@ -9,21 +9,18 @@
 <header>
     <nav>
         <ul class="nav-primary">
-            <li class="new-item home"><a href="#">home</a></li>
-            <li class="new-item"><a href="#">about us</a></li>
-            <li class="new-item"><a href="#">services</a></li>
-            <li class="new-item"><a href="#">cases</a></li>
-            <li class="new-item"><a href="#">news</a></li>
-            <li class="new-item"><a href="#">portfolio</a></li>
-            <li class="new-item"><a href="#">contacts</a></li>
+            <li class="nav-item home"><a href="#">home</a></li>
+            <li class="nav-item"><a href="#">about us</a></li>
+            <li class="nav-item"><a href="#">cases</a></li>
+            <li class="nav-item"><a href="#">news</a></li>
+            <li class="nav-item"><a href="#">portfolio</a></li>
+            <li class="nav-item"><a href="#">contacts</a></li>
         </ul>
     </nav>
     <div class="consulting-rev">
         <h1>video slider</h1>
-        <p>Challenging established thinking, achieving sustainable advantage</p>
-        <a href="#">our services
-            <i class="fa fa-chevron-right"></i>
-        </a>
+        <p>Challenging established…</p>
+        <a href="#">our services <i class="fa fa-chevron-right"></i></a>
     </div>
 </header>
 </body>
