--- a/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.html
+++ b/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.html
@@ -23,5 +23,58 @@
         <a href="#">our services <i class="fa fa-chevron-right"></i></a>
     </div>
 </header>
+<main>
+    <header>
+        <h2>Industries</h2>
+    </header>
+    <section class="travel-business-customer">
+        <div class="icon">
+            <i class="fa fa-plane" aria-hidden="true"></i>
+        </div>
+        <article>
+            <header><h2>Travel and Aviation Consulting</h2></header>
+            <p>We are a company that offers design and build services for you from initial sketches to the final
+                construction.</p>
+        </article>
+        <div class="icon">
+            <i class="fa fa-line-chart" aria-hidden="true"></i>
+        </div>
+        <article>
+            <header><h2>Business Services Consulting</h2></header>
+            <p>The sector is diverse, including professional services, education and training, and support services and
+                outsourcing.</p>
+        </article>
+        <div class="icon">
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+        </div>
+        <article>
+            <header><h2>Consumer Products Consulting</h2></header>
+            <p>We are a company that offers design and build services for you from initial sketches to the final construction.</p>
+        </article>
+    </section>
+    <section class="travel-business-customer">
+        <div class="icon">
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+        </div>
+        <article>
+            <header><h2>Financial Services Consulting</h2></header>
+            <p>We are a company that offers design and build services for you from initial sketches to the final construction.</p>
+        </article>
+        <div class="icon">
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+        </div>
+        <article>
+            <header><h2>Energy and Environment Consulting</h2></header>
+            <p>We are a company that offers design and build services for you from initial sketches to the final construction.</p>
+        </article>
+        <div class="icon">
+            <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+        </div>
+        <article>
+            <header><h2>Surface Transport & Logistics Consulting</h2></header>
+            <p>We are a company that offers design and build services for you from initial sketches to the final construction.</p>
+        </article>
+    </section>
+</main>
 </body>
 </html>
