--- a/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.html
+++ b/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.html
@@ -49,7 +49,8 @@
         </div>
         <article>
             <header><h2>Consumer Products Consulting</h2></header>
-            <p>We are a company that offers design and build services for you from initial sketches to the final construction.</p>
+            <p>We are a company that offers design and build services for you from initial sketches to the final
+                construction.</p>
         </article>
     </section>
     <section class="travel-business-customer">
@@ -58,22 +59,31 @@
         </div>
         <article>
             <header><h2>Financial Services Consulting</h2></header>
-            <p>We are a company that offers design and build services for you from initial sketches to the final construction.</p>
+            <p>We are a company that offers design and build services for you from initial sketches to the final
+                construction.</p>
         </article>
         <div class="icon">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
         </div>
         <article>
             <header><h2>Energy and Environment Consulting</h2></header>
-            <p>We are a company that offers design and build services for you from initial sketches to the final construction.</p>
+            <p>We are a company that offers design and build services for you from initial sketches to the final
+                construction.</p>
         </article>
         <div class="icon">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i>
         </div>
         <article>
             <header><h2>Surface Transport & Logistics Consulting</h2></header>
-            <p>We are a company that offers design and build services for you from initial sketches to the final construction.</p>
+            <p>We are a company that offers design and build services for you from initial sketches to the final
+                construction.</p>
         </article>
+    </section>
+    <section class="banner">
+        <h5>
+            <span>To help entrepreneurs get their act together</span>
+            before they talk to investors.
+        </h5>
     </section>
 </main>
 </body>
