--- a/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.html
+++ b/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.html
@@ -92,10 +92,7 @@
             <a href="#"><h4>Raw Spreads</h4>
                 <p>Receive premium pricing from Top…</p>
             </a>
-            <a href="#">
-                <h4>
-                    No Dealing Desk
-                </h4>
+            <a href="#"><h4>No Dealing Desk</h4>
                 <p>With Consulting WP you’ll…</p>
             </a>
             <a href="#"><h4>State of the Art</h4>
