--- a/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.html
+++ b/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.html
@@ -90,14 +90,11 @@
         <h2>Why Traders Choose Us</h2>
         <div class="article-container">
             <a href="#"><h4>Raw Spreads</h4>
-                <p>Receive premium pricing from Top…</p>
-            </a>
+                <p>Receive premium pricing from Top…</p></a>
             <a href="#"><h4>No Dealing Desk</h4>
-                <p>With Consulting WP you’ll…</p>
-            </a>
+                <p>With Consulting WP you’ll…</p></a>
             <a href="#"><h4>State of the Art</h4>
-                <p>Trade Forex and CFDs with the world’s…</p>
-            </a>
+                <p>Trade Forex and CFDs with the world’s…</p></a>
         </div>
     </section>
 </main>
