--- a/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.html
+++ b/L07 - Creating Landing Pages/P01_ConsultingAgency/ConsultingAgency.html
@@ -85,18 +85,78 @@
             before they talk to investors.
         </h5>
     </section>
-
     <section class="traders">
         <h2>Why Traders Choose Us</h2>
         <div class="article-container">
             <a href="#"><h4>Raw Spreads</h4>
-                <p>Receive premium pricing from Top…</p></a>
+                <p>Receive premium pricing from Top Tier financial institutions. Pricing from Top Tier financial
+                    institutions.from Top…</p></a>
             <a href="#"><h4>No Dealing Desk</h4>
-                <p>With Consulting WP you’ll…</p></a>
+                <p>With Consulting WP you’ll get no re-quotes, no dealer intervention and fair order execution.</p></a>
             <a href="#"><h4>State of the Art</h4>
-                <p>Trade Forex and CFDs with the world’s…</p></a>
+                <p>Trade Forex and CFDs with the world’s best trading platforms on your desktop or mobile device.</p>
+            </a>
         </div>
     </section>
+    <section class="consulting-woman">
+        <article class="testimonial-info">
+            <p>We were amazed by how little effort was required on our part to have Consulting WP prepare these
+                materials. We exchanged a few phone calls and e-mails, and they handled the rest.</p>
+            <footer>
+                <h4>Amanda Seyfried</h4>
+                <p><strong>Founder & CEO, Arcade Systems</strong></p>
+            </footer>
+        </article>
+    </section>
+    <section class="partners">
+        <ul>
+            <li><a href="#"><img src="images/partner-TVC.png" alt=""></a></li>
+            <li><a href="#"><img src="images/partner-fast-brothers.png" alt=""></a></li>
+            <li><a href="#"><img src="images/partner-arcade.png" alt=""></a></li>
+            <li><a href="#"><img src="images/partner-Edtech.png" alt=""></a></li>
+            <li><a href="#"><img src="images/partner-Volker-Stevin.png" alt=""></a></li>
+        </ul>
+    </section>
 </main>
+<footer class="footer">
+    <div class="info-socials-container">
+        <h2>Consulting</h2>
+        <ul class="info">
+            <li><i class="fa fa-map-marker"></i>1010 Avenue of …</li>
+            <li><i class="fa fa-clock-o"></i>Mon-Sat 8.00-18.00…</li>
+            <li><i class="fa fa-phone"></i>212 386 5578 Free call</li>
+            <li>
+                <ul class="socials">
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <div class="extra-links">
+        <h2>Extra Links</h2>
+        <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contacts</a></li>
+            <li><a href="#">Typography</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Shop</a></li>
+            <!—TODO put the rest list items here-->
+        </ul>
+    </div>
+    <div class="instagram-widget">
+        <h2>Instagram Widget</h2>
+        <ul>
+            <li><a href="#"><img src="images/footer-widget(1).jpg"></a></li>
+            <li><a href="#"><img src="images/footer-widget(2).jpg"></a></li>
+            <li><a href="#"><img src="images/footer-widget(3).jpg"></a></li>
+            <li><a href="#"><img src="images/footer-widget(4).jpg"></a></li>
+            <li><a href="#"><img src="images/footer-widget(5).jpg"></a></li>
+            <li><a href="#"><img src="images/footer-widget(6).jpg"></a></li>
+        </ul>
+    </div>
+</footer>
 </body>
 </html>
