--- a/E05 - CSS Formatting/P01_BookReview/book-review.html
+++ b/E05 - CSS Formatting/P01_BookReview/book-review.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Book Review</title>
 </head>
 <body>
-
+<header>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Top stories</a></li>
+            <li><a href="#">Favourites</a></li>
+        </ul>
+    </nav>
+</header>
 </body>
 </html>
