--- a/E05 - CSS Formatting/P02_OptionPanels/option-panels.html
+++ b/E05 - CSS Formatting/P02_OptionPanels/option-panels.html
@@ -16,5 +16,35 @@
         </ul>
     </nav>
 </header>
+
+<section class="Artic">
+    <img src="images/image-01.jpg">
+    <footer class="Art-footer">
+        <h1>small item</h1>
+        <p>Donec iaculis, metus at scelerisque sollicitudin, quam turpis tortor, in rhoncus ante odio ac
+            dolor.</p>
+    </footer>
+</section>
+<section class="Artic">
+    <img src="images/image-02.jpg">
+    <footer class="Art-footer">
+        <h1>full width item</h1>
+        <p>Nunc a rutrum massa, et maximus leo.</p>
+    </footer>
+</section>
+<section class="Artic">
+    <img src="images/image-03.jpg">
+    <footer class="Art-footer">
+        <h1>image list</h1>
+        <p>Cras imperdiet tellus enim, nec rhoncus ex accumsan eu. Nam fringilla ultrices.</p>
+    </footer>
+</section>
+<section class="Artic">
+    <img src="images/image-04.jpg">
+    <footer class="Art-footer">
+        <h1>slideshow</h1>
+        <p>Integer ut risus id nibh finibus ultrices a in leo. Nam lorem elit.</p>
+    </footer>
+</section>
 </body>
 </html>
