--- a/L06 - CSS Positioning/P02_DropDown/drop-down-menu.html
+++ b/L06 - CSS Positioning/P02_DropDown/drop-down-menu.html
@@ -8,25 +8,25 @@
 <body>
 <nav>
     <ul>
-        <li class="MainNav">Home</li>
-        <li class="MainNav">WordPress</li>
+        <li class="MainNav"><a href="#">Home</a></li>
+        <li class="MainNav"><a href="#">WordPress</a></li>
         <li class="MainNav" class="first-drop-down"><a class="first-drop-down" href="#">Web Design</a>
             <ul class="first-drop-down">
-                <li>Resources</li>
-                <li>Links</li>
-                <li>Tutorials
+                <li><a href="#">Resources</a></li>
+                <li><a href="#">Links</a></li>
+                <li><a href="#">Tutorials</a>
                     <ul>
-                        <li>HTML/CSS</li>
-                        <li>jQuery</li>
-                        <li>Other</li>
+                        <li><a href="#">HTML/CSS</a></li>
+                        <li><a href="#">jQuery</a></li>
+                        <li><a href="#">Other</a></li>
                     </ul>
                 </li>
             </ul>
         </li>
-        <li class="MainNav">Graphic Design</li>
-        <li class="MainNav">Inspiration</li>
-        <li class="MainNav">Contact</li>
-        <li class="MainNav">About</li>
+        <li class="MainNav"><a href="#">Graphic Design</a></li>
+        <li class="MainNav"><a href="#">Inspiration</a></li>
+        <li class="MainNav"><a href="#">Contact</a></li>
+        <li class="MainNav"><a href="#">About</a></li>
     </ul>
 </nav>
 </body>
