--- a/L06 - CSS Positioning/P03_FloatingElements/floating-elements.html
+++ b/L06 - CSS Positioning/P03_FloatingElements/floating-elements.html
@@ -6,16 +6,22 @@
     <link rel="stylesheet" href="floating-elements.css">
 </head>
 <body>
-<div class="FLeft">float:left</div>
-<p>The float CSS property specifies that an element should be taken from the normal flow and placed along the left or
-    right side of its container, where text and inline elements will wrap around it.</p>
-<div class="FRight">float:right</div>
-<p>The float CSS property specifies that an element should be taken from the normal flow and placed along the left or
-    right side of its container, where text and inline elements will wrap around it.</p>
-<p>Without floating, the inline-block elements float like words in a text and block elements just do not float and stay
-    in a vertical block of full width.</p>
-<div class="FNone">no floating block</div>
-<p>Without floating, the inline-block elements float like words in a text and block elements just do not float and stay
-    in a vertical block of full width.</p>
+<main>
+    <div class="left">float:left</div>
+    <p>The float CSS property specifies that an element should be taken from the normal flow and placed along the left
+        or
+        right side of its container, where text and inline elements will wrap around it.</p>
+    <div class="right">float:right</div>
+    <p>The float CSS property specifies that an element should be taken from the normal flow and placed along the left
+        or
+        right side of its container, where text and inline elements will wrap around it.</p>
+    <p>Without floating, the inline-block elements float like words in a text and block elements just do not float and
+        stay
+        in a vertical block of full width.</p>
+    <div class="center">no floating block</div>
+    <p>Without floating, the inline-block elements float like words in a text and block elements just do not float and
+        stay
+        in a vertical block of full width.</p>
+</main>
 </body>
 </html>
