--- a/E07 - Creating Landing Pages/P01_ConferenceLanding/conference.html
+++ b/E07 - Creating Landing Pages/P01_ConferenceLanding/conference.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Conference Landing Page</title>
 </head>
 <body>
-
+<header>
+    <nav>
+        <h1>
+            code mesh
+        </h1>
+        <ul>
+            <li><a href="#">speakers</a></li>
+            <li><a href="#">schedule</a></li>
+            <li><a href="#">workshops</a></li>
+            <li><a href="#">login</a></li>
+        </ul>
+    </nav>
+</header>
 </body>
 </html>
