--- a/E08 - HTML Forms and Styling/P01_Search-Job/search job.html
+++ b/E08 - HTML Forms and Styling/P01_Search-Job/search job.html
@@ -8,10 +8,10 @@
 <body>
 <nav>
     <ul>
-        <li>Search Business</li>
-        <li>Business Categories</li>
-        <li>Recent Locations</li>
-        <li>Agents Located</li>
+        <li><a href="#">Search Business</a></li>
+        <li><a href="#">Business Categories</a></li>
+        <li><a href="#">Recent Locations</a></li>
+        <li><a href="#">Agents Located</a></li>
     </ul>
 </nav>
 <main>
