--- a/Exam Preparation/EP01/03_BeatsOrderForm/form.html
+++ b/Exam Preparation/EP01/03_BeatsOrderForm/form.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>form</title>
     <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <main>
-    <img src="img/beats-img.png" alt="">
+    <img src="img/beats-img.png">
     <h1>beats solo 3 wireless headphones</h1>
     <p>$279</p>
     <form action="#" class="input-form">
@@ -16,20 +17,28 @@
                 <i class="fa fa-user"></i>
                 <input type="text" class="fa fa-user" placeholder="name on card">
             </div>
+
             <div class="input-field">
                 <i class="fa fa-globe"></i>
                 <input type="text" class="fa fa-globe" placeholder="country">
             </div>
+
             <div class="input-field">
                 <i class="fa fa-address-card-o"></i>
                 <input type="text" class="fa fa-address-card-o" placeholder="address">
             </div>
         </div>
         <div class="right">
-            <input type="text" class="fa fa-credit-card" placeholder="card number">
-            <input type="text" class="fa fa-lock" placeholder="csv">
-        </div>
+            <div class="input-field">
+                <i class="fa fa-credit-card"></i>
+                <input type="text" class="fa fa-credit-card" placeholder="country">
+            </div>
 
+            <div class="input-field">
+                <i class="fa fa-lock"></i>
+                <input type="text" class="fa fa-lock" placeholder="csv">
+            </div>
+        </div>
         <button>continue</button>
     </form>
 </main>
