--- a/Exam Preparation/EP01/03_BeatsOrderForm/form.html
+++ b/Exam Preparation/EP01/03_BeatsOrderForm/form.html
@@ -4,43 +4,46 @@
     <meta charset="UTF-8">
     <title>form</title>
     <link rel="stylesheet" href="form.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <main>
-    <img src="img/beats-img.png">
-    <h1>beats solo 3 wireless headphones</h1>
-    <p>$279</p>
-    <form action="#" class="input-form">
-        <div class="left">
-            <div class="input-field">
-                <i class="fa fa-user"></i>
-                <input type="text" class="fa fa-user" placeholder="name on card">
-            </div>
+    <div class="section-left">
+        <img src="img/beats-img.png">
+    </div>
+    <div class="section-right">
+        <h1>beats solo 3 wireless headphones</h1>
+        <p>$279</p>
+        <form action="#" class="input-form">
+            <div class="left">
+                <div class="input-field">
+                    <i class="fa fa-user"></i>
+                    <input type="text" class="fa fa-user" placeholder="name on card">
+                </div>
 
-            <div class="input-field">
-                <i class="fa fa-globe"></i>
-                <input type="text" class="fa fa-globe" placeholder="country">
-            </div>
+                <div class="input-field">
+                    <i class="fa fa-globe"></i>
+                    <input type="text" class="fa fa-globe" placeholder="country">
+                </div>
 
-            <div class="input-field">
-                <i class="fa fa-address-card-o"></i>
-                <input type="text" class="fa fa-address-card-o" placeholder="address">
+                <div class="input-field">
+                    <i class="fa fa-address-card-o"></i>
+                    <input type="text" class="fa fa-address-card-o" placeholder="address">
+                </div>
             </div>
-        </div>
-        <div class="right">
-            <div class="input-field">
-                <i class="fa fa-credit-card"></i>
-                <input type="text" class="fa fa-credit-card" placeholder="country">
-            </div>
+            <div class="right">
+                <div class="input-field">
+                    <i class="fa fa-credit-card"></i>
+                    <input type="text" class="fa fa-credit-card" placeholder="country">
+                </div>
 
-            <div class="input-field">
-                <i class="fa fa-lock"></i>
-                <input type="text" class="fa fa-lock" placeholder="csv">
+                <div class="input-field">
+                    <i class="fa fa-lock"></i>
+                    <input type="text" class="fa fa-lock" placeholder="csv">
+                </div>
+                <button>continue</button>
             </div>
-        </div>
-        <button>continue</button>
-    </form>
+        </form>
+    </div>
 </main>
 </body>
 </html>
