--- a/Exam Preparation/EP02/02.Best-Trip-Ever/best-trip-ever.html
+++ b/Exam Preparation/EP02/02.Best-Trip-Ever/best-trip-ever.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <title>Best Trip Ever</title>
     <link rel="stylesheet" href="best-trip-ever.css">
+    <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
 <header>
     <div class="header-wrapper">
         <div class="logo-image-container">
             <a href="#" class="logo-image-link">
-                <img src="Images/logo-light.png" alt="Senteni.png" class="logo-image">
+                <img src="images/logo-light.png" alt="Senteni.png" class="logo-image">
             </a>
         </div>
         <div class="top-button-container">
@@ -98,7 +99,7 @@
     <div class="footer-wrapper">
         <div class="logo-image-container">
             <a href="#" class="logo-image-link">
-                <img src="Images/logo-light.png" alt="Senteni.png" class="logo-image">
+                <img src="images/logo-light.png" alt="Senteni.png" class="logo-image">
             </a>
         </div>
         <ul class="footer-list">
