--- a/Exam Preparation/EP02/03.Get-in-Touch/Get-in-Touch.html
+++ b/Exam Preparation/EP02/03.Get-in-Touch/Get-in-Touch.html
@@ -13,29 +13,33 @@
             use a quick contact form below or visit our office personally. We would be happy to answer your
             questions.</p>
 
-        <div>
-            <label for="">
-                First name
-                <input type="text">
-            </label>
+        <div class="first-container">
+            <div>
+                <label for="">
+                    First name
+                    <input type="text">
+                </label>
+            </div>
+            <div>
+                <label for="">
+                    Last name
+                    <input type="text">
+                </label>
+            </div>
         </div>
-        <div>
-            <label for="">
-                Last name
-                <input type="text">
-            </label>
-        </div>
-        <div>
-            <label for="">
-                E-mail
-                <input type="text">
-            </label>
-        </div>
-        <div>
-            <label for="">
-                Phone
-                <input type="text">
-            </label>
+        <div class="second-container">
+            <div>
+                <label for="">
+                    E-mail
+                    <input type="text">
+                </label>
+            </div>
+            <div>
+                <label for="">
+                    Phone
+                    <input type="text">
+                </label>
+            </div>
         </div>
         <div class="text-area">
             <label for="">
